--- a/package.json
+++ b/package.json
@@ -1,41 +1,52 @@
 {
-  "name": "foodyapp",
-  "version": "0.1.0",
-  "private": true,
+  "name": "foodyclient",
+  "version": "1.0.0",
+  "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
+  "main": "next.config.js",
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "swagger": "node --loader ts-node/esm pages/api/docs/index.js",
-    "lint": "next lint"
+    "start": "next start"
   },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "@emotion/react": "^11.13.0",
+    "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
-    "@mantine/core": "^7.11.2",
-    "@mantine/hooks": "^7.11.2",
-    "@mui/material": "^5.16.5",
-    "axios": "^1.7.2",
-    "bcrypt": "^5.1.0",
-    "date-fns": "^2.30.0",
-    "firebase": "^10.1.0",
-    "firebase-admin": "^11.10.1",
-    "formidable": "^3.5.0",
-    "install": "^0.13.0",
-    "jsonwebtoken": "^9.0.1",
+    "@mui/material": "^5.16.7",
+    "@reduxjs/toolkit": "^2.2.7",
+    "@types/node": "^22.4.2",
+    "@types/react": "^18.3.4",
+    "@types/react-dom": "^18.3.0",
+    "axios": "^1.7.4",
+    "bcrypt": "^5.1.1",
+    "chart.js": "^4.4.4",
+    "chartjs-plugin-datalabels": "^2.2.0",
+    "date-fns": "^3.6.0",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.2.5",
+    "firebase": "^10.13.0",
+    "firebase-admin": "^12.3.1",
+    "formidable": "^3.5.1",
+    "jsonwebtoken": "^9.0.2",
     "multiparty": "^4.2.3",
-    "next": "13.4.12",
+    "next": "^14.2.5",
     "next-swagger-doc": "^0.4.0",
-    "nextjs-cors": "^2.1.2",
-    "npm": "^10.8.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "nextjs-cors": "^2.2.0",
+    "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
+    "react-slick": "^0.30.2",
     "react-text-typing": "^0.2.0",
+    "redux": "^5.0.1",
+    "slick-carousel": "^1.8.1",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-react": "^5.3.1"
-  },
-  "devDependencies": {
-    "eslint": "8.46.0",
-    "eslint-config-next": "13.4.12"
+    "swagger-ui-react": "^5.17.14",
+    "tailwindcss": "^3.4.10",
+    "typescript": "^5.5.4",
+    "update": "^0.7.4",
+    "uuid": "^10.0.0"
   }
 }
